...
    );
  };

  if (loading || !weatherData) return <Loading />;

  return (
    <View style={styles.container} testID="container">
      <ScrollView
        showsVerticalScrollIndicator={false}
        style={styles.scrollStyle}
        contentContainerStyle={styles.scrollContainerStyle}
        refreshControl={
          <RefreshControl
...
          />
        }>
        <View style={styles.header}>
          <Text style={styles.textHeader}>{getMsgSalutation()}</Text>
          {loadingRefresh && <ActivityIndicator color={colors.primary500} />}
          {!loadingRefresh && (
            <Text style={styles.textHeader} onPress={refresh} testID="refresh-button">
              Atualizar
            </Text>
          )}
        </View>

        <View style={styles.body}>
...
