...
          <Bullet isActive={activedIndex === 1} />
          <Bullet isActive={activedIndex === 2} />
        </View>
        <Button
          label={activedIndex === 1 ? 'Próximo' : 'Confirmar'}
          onPress={onPressButton}
          testID="onboarding-button-next"
        />
      </View>
    </View>
  );
};

